<resources>
    <string name="app_name">CipherCrack</string>
    <string name="caesar_shift">Shift</string>
    <string name="affine_a_equals">A=</string>
    <string name="affine_b_equals">B=</string>
    <string name="railfence_rails">Rails</string>
    <string name="skytale_cycle_length">Cycle Length</string>
    <string name="default_alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="default_cribs">and,the,have</string>
    <string name="default_padding"> \n</string>
    <string name="default_polybius_keyword">ABCDEFGHIKLMNOPQRSTUVWXYZ</string>
    <string name="default_heading">ABCDE</string>
    <string name="default_replace">JI</string>
    <string name="crack">Crack</string>
    <string name="analysis">Analysis</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="camera">Camera</string>
    <string name="cipher">Cipher</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="copy">Copy Results</string>
    <string name="email">Send E-Mail</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="frequency">Freq</string>
    <string name="cribs">Cribs</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="bigraph_frequency">Bigraph Freq</string>
    <string name="trigraph_frequency">Trigraph Freq</string>
    <string name="info_description">Cipher information</string>
    <string name="result">Result</string>
    <string name="entry_text_hint">Enter plain or cipher text</string>
    <string name="initial_entry_text_permutation">MEPET ATGES STACN OINAT NOCET RUTHF TRRAE IKNGC TFEXO ASNDT AMILE NISOS HTERU ECNTN LARER OINCG FNIRO ASCTM EVINI SETIV TAIOG NITON MEPET TTHES RUINT APPEG HSAVR EBENE UONDF DNTHA POERE ITVEA PAPES TROBA TSUDE TNSAE LAOCT ITONA TNHEI CIINV YTOFI ELTCB ELYPH KRTEA EPSTM ANLYA SIOFS OTRES NITED ENTTR FAFIR RFOMC EHSAT SEOUM ECSSR GGESU TSHAT HTEYT TCEDA ERVIP SULYO DNERU EHNAT TEHEM GIHTN ILMBC GNCLI SBURU IELLV CNEAA HDOUN KEEES NIGTP MASIE OSUTN RENCH TNRAE OTMOL TNDEU IALET ETMPD TSTRE KCINA NADTG RTIAO UGLAN OENTT FAFIR OSURC SELOC ODNRN IGONE MOOUT FTULN ETMPL TSTRE KCINA FOSEG RUITC NADPY ILCEO EGNCA SEANI OTRED ROTAP AYPPN ERNTA NOTAC WTITC HTENH HGTCI MIBIL CGLUN EMMBB SRSTE DNINA RODEG RSEMR NITHA NTOCA TNACO SITOT MEADB IWTHE TUDIO CETCR AERAL ECFRN MMYOO IFCEF ERPAP TAIOR SSHON DLBEU DAETM LEIMO ANTEI EHTHT AETBR NTOAU ITONC OHULS EBTAD NEWIK OHUTT NETRC ALUTA ROISH ITONA ATPPI RASTE TATHH POERE OTRSA ERYOA GNAMU ETURA NADGS EVNTI LEACH FOSOK IHSTP ACTII INNTO IERSH UCRIE IYTMT BYEDA FFICI TLTOU SICED HNOWR RATHF ETMPE TSPAE RESHP EVLEA EKDPA VEENR NIGAT IUTAS YLQUB TETEI IMNAR OINOT HTETF ERATH XXXXM</string>
    <string name="initial_entry_text1">DUSIO JUGOO JUOBS KJVYK IIPIJ OZMSI RKYYP JOIJO HYSIJ BVTUJ MVJUA CZDYO JOIKA AOIIM OISVY OHMVJ UVBRC KGUKB HGOHZ OJGOI CRJUO JSGTO JSBHZ CBVJC GOHSY YGSHV CJGSR RVARC GJMCU CKGIM VJUBC IVTBJ USJMO MOGOE OVBTM SJAUO HCGMO GOOLO BBCJV AOHMO JUOBA CBHKA JOHSR KYYGS HSGIM OODCR JUOSG OSSBH RCKBH JUGOO HOSHI DCJIM UOGOM OACKY HMCGX CBJUO IUVDM VJUCK JHOJO AJVCB SIDYS BBOHM OACBL OGJOH JUOJM CSHWS AOBJO ZDJPA CBJSV BOGIV BJUOZ VHHYO CRJUO IJSAX VBJCS YSGTO MCGXI UCDSG OSSBH ASGGV OHCKJ SRKYY VBIDO AJVCB HGVYY BCMOL OBVRM OSGOE CSGHO HCKGM CGXIU CKYHG OZSVB KBHOJ OAJOH MOGOJ GVOLO HIOSU CGIOR GCZJU OJUVG HACBJ SVBOG SBHAS GGVOH CKJIJ STOCB OCRJU OSIIO ZEYP</string>
    <string name="initial_entry_text2">qvgyp vlthr rnzof hpnzh rnzog aeonz altvp ypmnm oqogn oogga gonwo ayznf wehlt
vefay znwyh tzvmi eommo tzamf vbomn wmvlf magnz oevno ivnne oiwvy lovnq acnhl
whqol nzore oonhr nzoog ofwsz hfavn nvcdo tvnmp gmonh gnzor almnh rvpyp mnhrr
nzofh pnzhr nzoga eoanf vwion lpovm lofvl dotiw svema gyzvf agzam evmnn zvnfv
dwgyo svliw fovgm hrfhg owamh rpnfh mnafj hlnip niwyv tmalf vdagy svliw ralov
gtsag tkpac dogmn zomja lanvg tghnz agych petsa nzmnv gtnzo mkpvt lhgwh plehl
tmzaj tatfo nzozh ghpln hjevc opgto lfwch ffvgt nzoal zayzm nvnoh rtamc ajeag
oamso eedgh sgnhw hpvgt sanzn zobpt yfogn hrnzo cvjnv agmnh yonzo lsanz nzoal
qvehp lvgtn zvnhr nzohr racol mvgtf oghro qolwt omcla jnahg ansvm vimhe pnoew
allom amnai eochp etvgw nzagy rlhff wjogv ttnhn zoczv lvcno lhrnz ocvjn vagma
shpet slano ansan zjeov mploi pnnzv namaf jhmma ieonz oogof wsolo fhhlo tagvm
nlhgy eagoh rivnn eorhl torog tagyn zoogn lvgco hrnzo ivwre vgdot iwgpf olhpm
ypgih vnmrh plrla yvnom vgtvi vnnol whryp gmvgt fhlnv lmhgv gamev gtagn zoalq
vgpgt olhpl ypgmn zomza jmhrn zoogo fwvee ipnnz oalns hlovl mzajm solog ovlew
tamfv mnotv gtfog hrihn zmato msvnc zotag vsovm ehlao gnieo szolj hstol lhhfn
vdagy sanza nveen zozhj omhrn zvnto qaegv jheoh gnzhp yzfog reotn zomza jfvgw
soloe hmnnh nzosv nolhl nzora lovgt veenl vcohr nzoch gmjal vcwsv mchgm aygot
nhnzo toojj lommo mchag mvgtn zovyo gnmhr nzohl aognv eeehm nagnz vnfhm nvjne
wgvfo tqomm oecvj nvagi ollws aeejl omogn whpsa nznzo revyh rnzom ochgt agchf
fvgtn zvnhr nzoch ffvgt olagc zaori oagyi plgnf vlnag svmfh mnafj lommo tiwnz
ocpgg agyfo nzhtm ofjeh wotiw svema gyzvf agnza mzame vmneo nnolo gcajz oloti
wfovg mhrnz ovpnh cevqo nzoag anave dowrh lnzof ommvy omzhs mfpcz cevmm acvej
lomca ogcoy aqogn zorvn ohrfv lehso anmoo fmnzv nnzoa lmnhl wogtm ivtew vmanv
jjovl mthnz oeaqo mhrnz oczag omovy ognmh gehla ogneo npmjl vwnzv nhplm ogtms
oeema lzhlv nahgo emhgd ilovl vtfal vehrn zoiep oonca gvcna hgsan znzor logcz
vnvgc zhlhg nzora lmnhr vpypm nmoqo gnoog gagon woayz nhrrn zofhp nzhrn zogae
o</string>
    <string name="initial_entry_text">ABCQJDL D AQCAGLR CMNTBLQ SLATDNM NI TUQDMES OCOLQS DT WCS QLCJJY TQDAGY SDMAL BL USLR C GLYWNQR SUHSTDTUTDNM ADOBLQ HUT TBLM BL QLVLQSLR TBL NQRLQ NI TBL JLTTLQS DM LCAB IDVLHJNAG D BCR TN QLVLQSL TBLK CJJ KYSLJI HLINQL D ANUJR LVLM STCQT TN AQCAG DT DI D BCRMT EULSSLR DT WCS RNUHJL LMAQYOTLR D WNUJR MLVLQ BCVL ENT DT CMR DT WCS QLCJJY JNME MLXT NML YNU ELT TN RN CMYWCY D TBDMG YNU CQL QDEBT TLKOLST WCS TBL IDQST BCAGDME AQLW DM BDSTNQY CMR DI TUQDME MLVLQ AJNSLR TBLK RNWM TBLY ANUJR STDJJ HL CATDVL CMR TBLY ANUJR HL WCTABDME US D RNMT GMNW WBCT WL SBNUJR RN WBN RN YNU ANMTCAT CHNUT SNKLTBDME JDGL TBDS ACM WL FUST QDME UO EABP CMR QLONQT DT CMR WBCT RN WL QLONQT TBCT WL STNJL C HUMAB NI OCOLQS WBDJL TQLSOCSSDME NM OQDVCTL OQNOLQTY CMR TBCT TBLY LXONSL C TWN BUMRQLR YLCQ NJR ANMSODQCAY DT RNLSMT SNUMR ANMVDMADME RNLS DT HUT WBCT DI TBLY CQL STDJJ CATDVL KCYHL TBLY CQL HLBDMR CJJ TBLSL QLALMT ANMIJDATS NQ TBL HCMGDME AQDSDS NQ TBL OQNHJLKS DM EQLLAL TBDS ANUJR HL KCSSDVL D FUST BCR C TBNUEBT RDR YNU KLLT CMYNML CT TBCT UMDVLQSDTY SUKKLQ SABNNJ YNU WLMT TN WBN KDEBT HL CHJL TN BLJO WCSMT TBLQL C OQNILSSNQ HLM SNKLTBDMENQCMNTBLQ WBN WCS ANMMLATLR WDTB ANRLS ANUJR YNU CSG BDK WBCT WL SBNUJR RN KCQG</string>
    <string name="keyword">Keyword</string>
    <string name="digits">Digits</string>
    <string name="size">Size</string>
    <string name="default_binary_digits">01</string>
    <string name="default_binary_size">5</string>
    <string name="default_binary_separator"></string>
    <string name="default_full_keyword">====================</string>
    <string name="separator">Separator</string>
    <string name="extend_explain">Fill from:</string>
    <string name="extend_first">First</string>
    <string name="extend_min">Min</string>
    <string name="extend_max">Max</string>
    <string name="extend_last">Last</string>
    <string name="info">Info</string>
    <string name="edit">Edit</string>
    <string name="undo">Undo</string>
    <string name="uppercase">Uppercase</string>
    <string name="lowercase">Lowercase</string>
    <string name="remove_punctuation">Remove Punctuation</string>
    <string name="remove_padding">Remove Padding</string>
    <string name="reverse">Reverse</string>
    <string name="reverse_words">Reverse Words</string>
    <string name="split_words">Split Words</string>
    <string name="clear">Clear</string>
    <string name="pref_cribs">pref_cribs</string>
    <string name="pref_alphabet_plain">pref_alphabet_plain</string>
    <string name="pref_alphabet_cipher">pref_alphabet_cipher</string>
    <string name="pref_language">pref_language</string>
    <string name="pref_padding_chars">pref_padding_chars</string>
    <string name="bigram">Bigram</string>
    <string name="trigram">Trigram</string>
    <string name="count">Count</string>
    <string name="percent_sign">Text %</string>
    <string name="normal">Normal %</string>
</resources>