<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Encode", should appear as action button if possible -->
    <item
        android:id="@+id/action_crack_encode"
        android:icon="@android:drawable/ic_media_ff"
        android:title="@string/encode"
        app:showAsAction="ifRoom"/>

    <!-- "Decode", should appear as action button if possible -->
    <item
        android:id="@+id/action_crack_decode"
        android:icon="@android:drawable/ic_media_rew"
        android:title="@string/decode"
        app:showAsAction="ifRoom"/>

    <!-- "Crack", should appear as action button if possible -->
    <item
        android:id="@+id/action_crack_crack"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/crack"
        app:showAsAction="ifRoom"/>

    <!-- Info, should appear as action button if possible -->
    <item android:id="@+id/action_crack_info"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/info"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should appear as action button if possible -->
    <item android:id="@+id/action_crack_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

</menu>