<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- all buttons are below the hamburger menu icon -->
    <item android:id="@+id/action_result_split_words"
        android:icon="@android:drawable/ic_media_pause"
        android:title="@string/split_words"
        app:showAsAction="never"/>

    <item android:id="@+id/action_result_copy"
        android:icon="@android:drawable/arrow_up_float"
        android:title="@string/copy"
        app:showAsAction="never"/>

    <item android:id="@+id/action_result_email"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/email"
        app:showAsAction="never"/>

    <item android:id="@+id/action_result_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>