<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/digits"
        android:textColor="@color/white" />
    <EditText
        android:id="@+id/extra_binary_digits"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/default_binary_digits"
        android:importantForAutofill="no"
        android:hint="@string/digits"
        android:textColorHint="@color/darkgrey"
        android:padding="1dp"
        android:textColor="@color/entrytext_text"
        android:background="@drawable/entrytext_border"
        android:inputType="textNoSuggestions"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/size"
        android:textColor="@color/white" />
    <EditText
        android:id="@+id/extra_binary_size"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/default_binary_size"
        android:importantForAutofill="no"
        android:hint="@string/size"
        android:textColorHint="@color/darkgrey"
        android:padding="1dp"
        android:textColor="@color/entrytext_text"
        android:background="@drawable/entrytext_border"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/separator"
        android:textColor="@color/white" />
    <EditText
        android:id="@+id/extra_binary_separator"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/default_binary_separator"
        android:importantForAutofill="no"
        android:hint="@string/separator"
        android:textColorHint="@color/darkgrey"
        android:padding="3dp"
        android:textColor="@color/entrytext_text"
        android:background="@drawable/entrytext_border"
        android:inputType="textNoSuggestions"/>

</LinearLayout>