<?xml version="1.0" encoding="utf-8"?>
<FrameLayout tools:context="mnh.game.ciphercrack.StatisticActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:theme="@style/Theme.AppCompat"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:background="@color/black_overlay"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:ignore="UselessParent"
        android:padding="6sp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/stats_bigram_layout">
        <TableLayout android:background="@color/black_overlay"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/freq_bigram_layout"
            android:isScrollContainer="true"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:text="@string/bigram"
                    android:gravity="start"
                    android:padding="3dip"/>
                <TextView
                    android:text="@string/count"
                    android:gravity="start"
                    android:padding="3dip"/>
                <TextView
                    android:text="@string/percent_sign"
                    android:gravity="center"
                    android:padding="3dip"/>
                <TextView
                    android:text="@string/normal"
                    android:gravity="end"
                    android:padding="3dip"/>
            </TableRow>
            <TableRow>
                <View
                    android:layout_height="2dip"
                    android:background="#FF909090"
                    android:layout_span="4"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</FrameLayout>