<?xml version="1.0"?>
<FrameLayout tools:context="mnh.game.ciphercrack.AnalysisActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:theme="@style/Theme.AppCompat"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout android:background="@color/black_overlay"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:ignore="UselessParent"
            android:padding="6sp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/stats_main_layout">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/stats_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            <TableLayout android:background="@color/black_overlay"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/freq_letter_layout"
                android:stretchColumns="1">
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/trigram"
                        android:gravity="start"
                        android:padding="3dip"/>
                    <TextView
                        android:text="@string/count"
                        android:gravity="start"
                        android:padding="3dip"/>
                    <TextView
                        android:text="@string/percent_sign"
                        android:gravity="center"
                        android:padding="3dip"/>
                    <TextView
                        android:text="@string/normal"
                        android:gravity="end"
                        android:padding="3dip"/>
                </TableRow>
                <View
                    android:layout_height="2dip"
                    android:background="#FF909090" />
            </TableLayout>
        </LinearLayout>
</FrameLayout>