<?xml version="1.0"?>
<LinearLayout
    tools:context="mnh.game.ciphercrack.HomeActivity"
    android:id="@+id/home_main_layout"
    android:background="@color/black_overlay"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="6sp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:theme="@style/CrackTheme"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/Crack.Toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- where the user types the cipher or plain text -->
    <EditText
        android:id="@+id/home_entry_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/entry_text_hint"
        android:textColorHint="@color/crackPrimaryDark"
        android:importantForAutofill="no"
        android:gravity="top|start"
        android:layout_weight="1"
        android:textSize="16sp"
        android:inputType="textMultiLine|textNoSuggestions"
        android:scrollIndicators="right"
        android:text="@string/initial_entry_text"/>

    <!-- this is where we programmatically put the extra controls for each cipher type -->
    <LinearLayout
        android:id="@+id/home_extra_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent" />

    <!-- the 3 buttons at the bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- where the user selects which kind of cipher to use -->
        <Spinner
            android:id="@+id/home_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"/>

        <Button
            android:id="@+id/home_button_encode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/encode"
            android:onClick="performEncode"/>
        <Button
            android:id="@+id/home_button_decode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="1dp"
            android:textSize="12sp"
            android:text="@string/decode"
            android:onClick="performDecode"/>
        <Button
            android:id="@+id/home_button_crack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/crack"
            android:onClick="performCrack"/>
    </LinearLayout>

    <!-- the navigation view at the bottom to jump around the app -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/home_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="end"
        app:itemIconTint="@color/crackPrimaryVVLight"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_menu" />

</LinearLayout>
